--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.90.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
     "postcss": "^8.5.6",
