--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
+    "next-nprogress-bar": "^2.4.7",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -32,6 +34,7 @@
     "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.14",
     "zod": "^4.1.11"
   },
